scripts/nullness/annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8.txt
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/instructions/ADDTest.java:8: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:4: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000Test.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/instructions/ADDTest.java:39: error: cannot find symbol
	@Initializer public void setUp()
	 ^
  symbol:   class Initializer
  location: class ADDTest
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1861: error: cannot find symbol
		@Initializer public void init(int param, Size sz)
		 ^
  symbol:   class Initializer
  location: class CpuCore.AddressRegisterWithIndexOperand
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2249: error: cannot find symbol
		@Initializer public void init(int param, Size sz)
		 ^
  symbol:   class Initializer
  location: class CpuCore.PCWithIndexOperand
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2474: error: cannot find symbol
		@Initializer public void init(int param, Size sz)
		 ^
  symbol:   class Initializer
  location: class CpuCore.StatusRegisterOperand
../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000Test.java:37: error: cannot find symbol
	@Initializer public void setUp()
	 ^
  symbol:   class Initializer
  location: class MC68000Test
Note: ../annotator/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
8 errors
